egon jfreechart version